# MNN

./: .gitignore  CMakeLists.txt  QUICKJS_SURVEY.md  llm_config.json  mnndev  prompt_hello  prompt_image  prompt_video  test_download_provider.sh  video_prompt_guide.md
.github/workflows/: mnn_release.yml  nightly_build.yml
apps/Android/MnnLlmChat/: build.sh  download_libs.gradle  settings.gradle
apps/Android/MnnLlmChat/app/: build.gradle
apps/Android/MnnLlmChat/app/src/androidTest/java/com/alibaba/mnnllm/android/modelist/: ModelListFragmentTest.kt
apps/Android/MnnLlmChat/app/src/main/: AndroidManifest.xml
apps/Android/MnnLlmChat/app/src/main/cpp/: CMakeLists.txt  llm_session.cpp  sana_session.cpp  sana_session.h
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mls/api/: ModelItem.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/: MnnLlmApplication.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/asr/: AsrService.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/audio/: AudioChunksPlayer.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/debug/: DebugActivity.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/mainsettings/: MainSettingsFragment.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/model/: ModelTypeUtils.kt  ModelUtils.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/modelist/: FilterSelectionDialogFragment.kt  FilterState.kt  ModelListAdapter.kt  ModelListFragment.kt  ModelListPresenter.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/update/: UpdateChecker.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/utils/: ImageUtils.kt
apps/Android/MnnLlmChat/app/src/main/java/com/k2fsa/sherpa/mnn/: OnlineRecognizer.kt
apps/Android/MnnLlmChat/app/src/main/jniLibs/mnn/include/diffusion/: diffusion.hpp
apps/Android/MnnLlmChat/app/src/main/res/layout/: activity_debug.xml  dialog_filter_options.xml  list_item_filter_option.xml
apps/Android/MnnLlmChat/app/src/main/res/menu/: menu_main.xml
apps/Android/MnnLlmChat/app/src/main/res/values/: strings.xml
apps/Android/MnnLlmChat/app/src/main/res/values-zh/: strings.xml
apps/Android/MnnLlmChat/app/src/main/res/xml/: main_settings_prefs.xml
apps/Android/MnnLlmChat/app/src/test/java/com/alibaba/mnnllm/android/modelist/: ModelListAdapterTest.kt  ModelListPresenterTest.kt
apps/Android/MnnLlmChat/docs/: ARCHITECTURE.md  MODULE_ChatEngine.md  MODULE_History.md  MODULE_ModelList.md  MODULE_OtherFeatures.md  MODULE_Settings.md  MODULE_Utilities.md  REFACTORING_TODO.md
apps/Android/MnnLlmChat/tests/smoke/scripts/: 19_regress_vision_chat_ui.sh
apps/Android/MnnTaoAvatar/app/: build.gradle
apps/Android/MnnTaoAvatar/app/src/main/java/com/taobao/meta/avatar/: MainActivity.kt
apps/Android/MnnTaoAvatar/app/src/main/java/com/taobao/meta/avatar/a2bs/: A2BSService.kt  A2BSServiceFactory.kt  AudioBlendShapePlayer.kt  (+2 more)
apps/Android/MnnTaoAvatar/app/src/main/res/layout/: activity_llm_service_settings.xml
apps/framework/: CMakeLists.txt  README.md
apps/framework/include/: calculator.h
apps/framework/src/android/: jni_bridge.cpp
apps/framework/src/common/: calculator.cpp
apps/framework/src/ios/: ios_bridge.mm
apps/framework/tests/: test_calculator.cpp
apps/frameworks/mnn_tts/: CMakeLists.txt
apps/frameworks/mnn_tts/android/: CMakeExports.txt  build.gradle  check_jni_symbol.sh  settings.gradle
apps/frameworks/mnn_tts/android/java/com/taobao/meta/avatar/tts/: TtsService.kt
apps/frameworks/mnn_tts/demo/android/: build.gradle  settings.gradle
apps/frameworks/mnn_tts/demo/android/src/main/: AndroidManifest.xml
apps/frameworks/mnn_tts/demo/android/src/main/java/com/alibaba/mnn/tts/: MNNTTS.kt
apps/frameworks/mnn_tts/demo/android/src/main/java/com/alibaba/mnn/tts/demo/: MainActivity.java  MainActivity.kt
apps/frameworks/mnn_tts/demo/android/src/main/java/com/alibaba/mnn/tts/demo/audio/: AudioChunksPlayer.kt
apps/frameworks/mnn_tts/demo/android/src/main/res/layout/: activity_main.xml
apps/mnncli/: .cursorrules  CMakeLists.txt  README_ANDROID_SSL.md  README_ENHANCED_SEARCH.md  README_MODEL_DOWNLOAD_MANAGER.md  README_MULTI_PLATFORM_DOWNLOADER.md  README_Windows.md  build.bat  build.ps1  build.sh  build_android.sh  build_android_multi_arch.sh  clean.bat  test_android.sh  test_search  test_verbose.sh
apps/mnncli/include/: hf_api_client.hpp  hf_file_metadata_utils.hpp  hf_model_downloader.hpp  log_utils.hpp  ml_model_downloader.hpp  mnncli_config.hpp  model_download_manager.hpp  model_file_downloader.hpp  model_runner.hpp  ms_model_downloader.hpp  remote_model_downloader.hpp
apps/mnncli/src/: file_utils.cpp  hf_api_client.cpp  hf_file_metadata_utils.cpp  hf_model_downloader.cpp  hf_sha_verifier.cpp  log_utils.cpp  ml_api_client.cpp  ml_model_downloader.cpp  mnncli.cpp  model_download_manager.cpp  model_file_downloader.cpp  model_runner.cpp  ms_api_client.cpp  ms_model_downloader.cpp  multi_platform_downloader_demo.cpp  remote_model_downloader.cpp  test_compilation.cpp
apps/mnncli/test/: CMakeLists.txt  ms_model_downloader_test.cpp
docs/: LLM_SERVER_README.md
docs/transformers/: support_video.md
js/: .npmignore  RELEASE.md
nodemnn/: CMakeLists.txt  index.js  package-lock.json  package.json
nodemnn/src/: MNN.cc
nodemnn/test/: functional_test.js  functional_test_extended.js  test.js
sana/: SANA_DEMO_README.md  run_sana_benchmark_android.sh  run_sana_benchmark_host.sh  run_sana_demo.sh
source/backend/qnn/: CMakeLists.txt
transformers/diffusion/engine/: sana_diffusion_demo.cpp
transformers/llm/engine/: CMakeLists.txt
transformers/llm/engine/app/: mls.cpp  ms_api_client.cpp  ms_api_client.hpp  ms_remote_model_downloader.cpp  ms_remote_model_downloader.hpp
transformers/llm/engine/demo/: llm_demo.cpp
transformers/llm/engine/include/llm/: llm.hpp
transformers/llm/engine/src/: omni.cpp  omni.hpp  prompt.cpp  prompt.hpp
transformers/llm/engine/test/: video_test.cpp
(+8 files in other folders)
